tests/fail/nightly/missing_type.stderr
error: more placeholders than types provided
 --> tests/fail/nightly/missing_type.rs:2:34
  |
2 |     sscanf::sscanf!("hi", "asdf{}{}asdf{}", usize);
  |                                  ^^

error: more placeholders than types provided
 --> tests/fail/nightly/missing_type.rs:2:40
  |
2 |     sscanf::sscanf!("hi", "asdf{}{}asdf{}", usize);
  |                                        ^^

error: more placeholders than types provided
 --> tests/fail/nightly/missing_type.rs:3:43
  |
3 |     sscanf::sscanf!("hi", "asdf{}{usize}as{}df{i32}", usize);
  |                                           ^^
